# Macros

./: Cargo.toml  Makefile  README.md  justfile
res/: macros.desktop
src/: app.rs  macros.rs  main.rs  util.rs
