[package]
name = "macros"
version = "0.1.0"
edition = "2024"

[dependencies]
tracing = "0.1.41"
tracing-log = "0.2.0"
tracing-subscriber = "0.3.20"
serde = { version = "1.0.228", features = ["derive"] }
enigo = { version = "0.6.1", features = ["serde", "x11rb"] }
slotmap = { version = "1.0.7", features = ["serde"] }
tokio = { version = "1.49.0", features = ["rt", "rt-multi-thread", "macros"] }

[dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic.git"
rev = "30a02ec"
version = "1.0.0"
default-features = false
features = [
    "debug",
    "winit",
    "tokio",
    "xdg-portal",
    "dbus-config",
    "a11y",
    "wayland",
    "wgpu",
    "single-instance",
    "multi-window",
    "serde-keycode"
]

[build-dependencies]
