[package]
name = "macros"
version = "0.1.0"
edition = "2024"
rust-version = "1.94.0"

[dependencies]
tracing = "0.1.41"
tracing-log = "0.2.0"
tracing-subscriber = "0.3.23"
serde = { version = "1.0.228", features = ["derive"] }
enigo = {
    git = "https://github.com/enigo-rs/enigo.git",
    rev = "6f311ea",
    features = ["serde", "x11rb", "wayland"]
}
slotmap = { version = "1.0.7", features = ["serde"] }
tokio = { version = "1.50.0", features = ["rt", "rt-multi-thread", "macros"] }

[dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic.git"
rev = "52116d2"
version = "1.0.0"
default-features = false

[target.'cfg(windows)'.dependencies]
libcosmic = {
    git = "https://github.com/pop-os/libcosmic.git",
    rev = "52116d2",
    version = "1.0.0",
    default-features = false,
    features = [
        #"debug",
        "winit",
        "tokio",
        "multi-window",
        "serde-keycode"
    ]
}

[target.'cfg(target_os = "linux")'.dependencies]
libcosmic = {
    git = "https://github.com/pop-os/libcosmic.git",
    rev = "52116d2",
    version = "1.0.0",
    default-features = false,
    features = [
        #"debug",
        "winit",
        "tokio",
        "xdg-portal",
        "dbus-config",
        "a11y",
        "multi-window",
        "serde-keycode"
    ]
}

[build-dependencies]
