[package]
name = "macros"
version = "0.1.0"
edition = "2024"

[dependencies]
tracing = "0.1.41"
tracing-log = "0.2.0"
tracing-subscriber = "0.3.23"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
dirs = "6.0.0"
uuid = { version = "1.18.1", features = ["v4"] }
enigo = {
    git = "https://github.com/enigo-rs/enigo.git",
    rev = "6f311ea",
    features = ["serde", "x11rb", "wayland"]
}
slotmap = { version = "1.0.7", features = ["serde"] }
tokio = { version = "1.50.0", features = ["rt", "rt-multi-thread", "macros"] }
global-hotkey = "0.7.0"
async-std = "1.13.2"

[dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic.git"
rev = "8b4c8ad"
version = "1.0.0"
default-features = false

[target.'cfg(windows)'.dependencies]
libcosmic = {
    git = "https://github.com/pop-os/libcosmic.git",
    rev = "8b4c8ad",
    version = "1.0.0",
    default-features = false,
    features = [
        #"debug",
        "winit",
        "tokio",
        "multi-window",
        "serde-keycode"
    ]
}

[target.'cfg(target_os = "linux")'.dependencies]
libcosmic = {
    git = "https://github.com/pop-os/libcosmic.git",
    rev = "8b4c8ad",
    version = "1.0.0",
    default-features = false,
    features = [
        #"debug",
        "winit",
        "tokio",
        "xdg-portal",
        "dbus-config",
        "a11y",
        "multi-window",
        "serde-keycode"
    ]
}

[build-dependencies]
